--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "lint": "eslint --ext .js,.vue src"
   },
   "dependencies": {
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.1",
     "vue": "^2.2.6",
     "vue-router": "^2.3.1"
   },
