--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1",
     "vue": "^2.2.6",
+    "vue-resource": "^1.3.1",
     "vue-router": "^2.3.1"
   },
   "devDependencies": {
